force-app/main/default/objects/SCRUM_PS_Backlog__c/SCRUM_PS_Backlog__c.object-meta.xml
<CustomObject>
    <description>Datasource for SCRUM Reporting.</description>
    <label>SCRUM PS Backlog</label>
    <nameField>
        <displayFormat>PSS{0000}</displayFormat>
        <label>SCRUM PS Backlog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCRUM PS Backlog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>