force-app/main/default/objects/SCRUM_PS_Backlog__c/fields/Q03__c.field-meta.xml
<CustomField>
    <fullName>Q03__c</fullName>
    <label>Q03</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>