force-app/main/default/objects/SCRUM_PS_Backlog__c/fields/Q_Past__c.field-meta.xml
<CustomField>
    <fullName>Q_Past__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Added post object creation by sharris 11/05/2012</description>
    <label>Q Past</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>