force-app/main/default/objects/SCRUM_PS_Backlog__c/fields/ReportSort__c.field-meta.xml
<CustomField>
    <fullName>ReportSort__c</fullName>
    <label>ReportSort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>