force-app/main/default/objects/SCRUM_PS_Backlog__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <description>Added post object creation by sharris 11/05/2012</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>